--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ nav{
 .projects{
     width: 100%;
     background-color: #444;
-    padding: 3rem;
+    padding-top: 5rem;
     text-align: center;
     color: #f4f4f4;
     font-size: 1.5rem;
@@ -459,6 +459,9 @@ footer .social-links a:hover{
 /* End Screen 550px */
 /* Mobile L */
 @media screen and (max-width:425px){
+    .logo{
+        font-size: 1.2rem;
+    }
     .hero h1{
         font-size: 2.2rem;
     }
