--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ nav{
 footer{
     width: 100%;
     height: 10vh;
+    min-height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
