--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ nav{
     align-items: center;
     flex-direction: column;
 }
-.contact-form form input,
+.contact-form form input:not(.send),
 .contact-form form textarea{
     width: 500px;
     height: 4vh;
