--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ nav{
 footer{
     position: relative;
     width: 100%;
-    height: 10vh;
+    min-height: 10vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
