--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ nav{
 .nav-bar{
     margin: auto;
     width: 90%;
-    height: 100%;
-    min-height: 6vh;
+    height: 6vh;
+    min-height: 58.14px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -454,7 +454,8 @@ footer .social-links a:hover{
         bottom: 0;
     }
     .nav-bar{
-       min-height: 8vh;
+       height: 8vh;
+       min-height: 77.52px;
     }
 }
 /* End Tablet view */
