--- a/style.css
+++ b/style.css
@@ -241,10 +241,33 @@ nav{
     min-height: 50vh;
 }
 .project{
-    width: 300px;
-    height: 300px;
     margin: 10px 20px;
-    background-color: crimson;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.project .btn {
+    display: inline-block;
+    width: fit-content;
+    padding: 10px 15px;
+    color: #f4f4f4;
+    background-color: transparent;
+    border: 2px solid crimson;
+    border-radius: 10px;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    margin-bottom: 10px;
+    transition: .3s ease;
+    transition-property: background-color;
+}
+.project .btn:hover{
+    background-color: rgba(220, 20, 60, 0.589);
+}
+.project-img img {
+    max-width: 500px;
+    width: 100%;
 }
 
 /* End of Projects section */
