--- a/style.css
+++ b/style.css
@@ -524,8 +524,7 @@ footer .social-links a:hover{
         padding: 2rem 1rem;
     }
     .nav-links li a::after{
-       font-size: 4rem;
-       letter-spacing: 20px;
+        color: transparent;
     }
 }
 /* End Mobile L */
