--- a/style.css
+++ b/style.css
@@ -41,11 +41,13 @@ nav{
     align-items: center;
 }
 .logo{
-    font-size: 1.4rem;
-    font-weight: 500;
-    letter-spacing: .2rem;
-    color: #f4f4f4;
     flex: 1 0 50%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.logo-img{
+    width: 200px;
 }
 
 .nav-links{
