--- a/style.css
+++ b/style.css
@@ -247,10 +247,15 @@ nav{
     flex-direction: column;
     align-items: center;
 }
+.project-links{
+    display: flex;
+    justify-content: space-around;
+}
 .project .code-link {
     display: inline-block;
     width: 150px;
     padding: 10px 15px;
+    margin: 5px;
     color: #f4f4f4;
     background-color: transparent;
     border: 2px solid crimson;
@@ -258,7 +263,6 @@ nav{
     font-size: .8rem;
     text-transform: uppercase;
     letter-spacing: .1rem;
-    margin: 10px;
     transition: .3s ease;
     transition-property: background-color;
 }
@@ -266,6 +270,7 @@ nav{
     display: inline-block;
     width: 150px;
     padding: 10px 15px;
+    margin: 5px;
     color: #f4f4f4;
     background-color: crimson;
     border: 2px solid crimson;
@@ -273,7 +278,6 @@ nav{
     font-size: .8rem;
     text-transform: uppercase;
     letter-spacing: .1rem;
-    margin: 10px;
     transition: .3s ease;
     transition-property: background-color;
 }
@@ -544,6 +548,10 @@ footer .social-links a:hover{
     }
     .nav-links li a::after{
         color: transparent;
+    }
+    .project .site-link,
+    .project .code-link {
+        transform: scale(.8);
     }
 }
 /* End Mobile L */
