final design change

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav{
     align-items: center;
 }
 .logo{
-    padding-left: 3%;
+    padding: 20px 0 0 25px;
     flex: 1 0 50%;
     display: flex;
     justify-content: flex-start;
@@ -358,22 +358,17 @@ nav{
 footer{
     position: relative;
     width: 100%;
-    min-height: 10vh;
+    min-height: 12vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
     background-color: #444;
 }
-footer .f-logo{
-    color: #f4f4f4;
-    font-size: .7rem;
-    margin: 0;
-}
 footer .social-links a{
     color: #f4f4f4;
     font-size: 2rem;
-    padding: 0 10px;
+    padding: 10px;
     transition: .3s ease color;
 }
 footer .social-links a:hover{
