--- a/style.css
+++ b/style.css
@@ -233,6 +233,7 @@ nav{
     font-size: 1.5rem;
 }
 .projects-container{
+    padding-top: 2rem;
     width: 100%;
     display: flex;
     flex-flow: row wrap;
