--- a/style.css
+++ b/style.css
@@ -248,6 +248,10 @@ nav{
     flex-direction: column;
     align-items: center;
 }
+.project-title {
+    color: crimson;
+    margin-bottom: 10px;
+}
 .project-links{
     display: flex;
     justify-content: space-around;
